# TinyAGI

./: LICENSE  README.md  cli.bat  cli.py  conftest.py  download_nltk.py  gemini_agent_interaction.py  gemini_interaction.py  gemma_interaction.py  install.py  install.sh  install_hub.bat  installation_windows.bat  ollama_interaction.py  pyproject.toml  run_cli.py  start.py  start_server.bat  test_gemini_agent.py  test_gemma_agent.py  test_ollama_agent.py  test_task_manager.py  uninstallation_windows.bat  update_windows.bat  venv.bat
Documents/: __init__.md  agent.md  plugin_manager.md  requirements.md  task_manager.md  utils.md
Documents/agents/: agent_manager.md  alpaca_x_agent.md  base_agent.md  llama_cpp_agent.md  ollama_agent.md  openai_agent.md  tabitha_agent.md
Documents/config/: agent_config.md
Documents/modules/: module_manager.md
Documents/plugins/: code_formatter.md  generate_references.md  generate_summary.md  generate_tags.md  generate_text.md  plugin_manager.md
Documents/services/: cli_manager.md  server_manager.md
Documents/tools/: base_tool.md  tool_manager.md  wikipedia_tool.md
Tests/: ollama_agent_test.json
TinyAGI/: README.md  __init__.py  agent.py  config_validator.py  core.py  index.html  planner.py  requirements.txt  style.css  task_manager.py
TinyAGI/agents/: README.md  _responsive.css  agent_manager.py  gemini_agent.py  gemma_agent.py  huggingface_agent.py  imagen_agent.py  lyria_agent.py  ollama_agent.py  openai_agent.py  robotics_agent.py  veo_agent.py
TinyAGI/cli/: __init__.py  command_executor.py  command_manager.py  ui.py
TinyAGI/cli/commands/: __init__.py  agents.py  base_command.py  chat.py  config.py  exit.py  generate.py  plugins.py  run.py  tools.py
TinyAGI/core/: __init__.py  base_manager.py  component_manager.py
TinyAGI/modules/: README.md
TinyAGI/plugins/: README.md  app.py  exit_cli.py  file_plugin.py  plugin_manager.py  run_cli.py  tool_executor.py  weather_plugin.py
TinyAGI/services/: README.md  __init__.py  cli_manager.py  index.html  main.js  server_manager.py
TinyAGI/static/css/: style.css
TinyAGI/static/css/style/: _animations.css  _base.css  _chat.css  _components.css  _ide_studio.css  _image_studio.css  _layout.css  _modals.css  _responsive.css  _robotics_studio.css  _sidebar.css  _studios.css  _toast.css
TinyAGI/static/js/: _chat.css  api.js  chat.js  index.html  main.js  toast.js  ui.js
TinyAGI/static/js/features/: agent-manager.js  document-qa-studio.js  ide-studio.js  image-studio.js  music-studio.js  robotics-studio.js  settings.js  video-studio.js
TinyAGI/static/js/lib/: settings.js
TinyAGI/static/js/ui/: collapsible.js  common.js  modal.js  sidebar.js  theme.js  view-switcher.js
TinyAGI/template/: index.html
TinyAGI/templates/: database.py  index.html
TinyAGI/tools/: README.md  google_search_tool.py  tool_manager.py  weather_tool.py  wikipedia_tool.py  yfinance_tool.py
config/: agent_config.json  gemini_agent_test.json  ollama_agent_poem.json  windows_installation.ini
models/: gemma-2b-it.json  gemma-3n-e2b-it.json
tests/: test_agent_manager.py  test_config_validator.py  test_plugin_manager.py
